# scpadb

./: .gitignore  AGENTS.md  README.md  index.html  ingest.py  pyproject.toml
analysis/: README.md
analysis/notebooks/: 01_eda.ipynb  01_eda.py  02_judge_analysis.ipynb  02_judge_analysis.py  03_score_trends.ipynb  03_score_trends.py  04_debut_prediction.py  05_secondary_analysis.py  test.ipynb  test.py
config/: duplicates_manual_check.md  ensemble_aliases.csv  ensemble_class_tracks.csv  judge_names.csv  representative_programs.csv
css/: style.css
js/: app.js
notebooks/: 01_eda.ipynb  02_judge_analysis.ipynb  03_score_trends.ipynb  test.ipynb
report/: Makefile  README.md  main.tex  references.bib
report/figures/: fig_class_score_trends.tex  fig_predicted_vs_observed.tex  fig_ridge_coefficients.tex  fig_season_effects.tex
report/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_dataset.tex  04_methods.tex  05_results.tex  06_secondary_analysis.tex  07_limitations.tex  08_conclusion.tex
report/tables/: tab_ablation.tex  tab_holdout_by_class.tex  tab_holdout_metrics.tex
scripts/: audit_tracks.py  build_model_dataset.py  derive.py  ingest.py  run_descriptive_analysis.py  run_model_analysis.py  run_secondary_analysis.py  verify_analysis_ready.py
urls/: all_seasons.txt
